reports/mhw_observation_myst.log
Traceback (most recent call last):
  File "/home/chsu/miniconda3/envs/boto3-jupyterbook/lib/python3.9/site-packages/jupyter_cache/executors/utils.py", line 51, in single_nb_execution
    executenb(
  File "/home/chsu/miniconda3/envs/boto3-jupyterbook/lib/python3.9/site-packages/nbclient/client.py", line 1085, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/home/chsu/miniconda3/envs/boto3-jupyterbook/lib/python3.9/site-packages/nbclient/util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/home/chsu/miniconda3/envs/boto3-jupyterbook/lib/python3.9/site-packages/nbclient/util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "/home/chsu/miniconda3/envs/boto3-jupyterbook/lib/python3.9/asyncio/base_events.py", line 642, in run_until_complete
    return future.result()
  File "/home/chsu/miniconda3/envs/boto3-jupyterbook/lib/python3.9/site-packages/nbclient/client.py", line 551, in async_execute
    await self.async_execute_cell(
  File "/home/chsu/miniconda3/envs/boto3-jupyterbook/lib/python3.9/site-packages/nbclient/client.py", line 846, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "/home/chsu/miniconda3/envs/boto3-jupyterbook/lib/python3.9/site-packages/nbclient/client.py", line 748, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
ds_mon_anom.sst.groupby('time.month').quantile(0.95,dim='time')` 
------------------

[0;36m  Input [0;32mIn [9][0;36m[0m
[0;31m    ds_mon_anom.sst.groupby('time.month').quantile(0.95,dim='time')`[0m
[0m                                                                   ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (4222541081.py, line 1)

